move lua helpers to the library Signed-off-by: Alexander Shishkin <virtuoso@slind.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,18 +7,19 @@ libslindak_la_SOURCES = \
 	debfile.c      \
 	slind.c        \
 	util.c         \
+	lua.c          \
 	output.c
 libslindak_la_CFLAGS = -DBUILD_DATE="\"$(BUILD_DATE)\"" -DHACKER=$(HACKER) $(LUA_CFLAGS)
 libslindak_la_LDFLAGS = -Wl,-soname=$(SLINDAK_SONAME)
 
 slindak_SOURCES = \
 	slindak.c      \
+	aptconf.c      \
 	lists.c        \
-	lua.c          \
 	messages.c     \
 	package.c      \
 	pool.c         \
 	configuration.c
-slindak_CFLAGS = -DBUILD_DATE="\"$(BUILD_DATE)\"" -DHACKER=$(HACKER) $(LUA_CFLAGS)
+slindak_CFLAGS = -DBUILD_DATE="\"$(BUILD_DATE)\"" -DHACKER=$(HACKER) $(LUA_CFLAGS) -I../include
 slindak_LDADD = $(SQL_LIBS) $(LUA_LIBS) $(POPT_LIBS) -lslindak
 
