add slindweb skeleton, separate-out interface headers Signed-off-by: Alexander Shishkin <virtuoso@slind.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
-bin_PROGRAMS = slindak
+bin_PROGRAMS = slindak slindweb
 lib_LTLIBRARIES = libslindak.la
 
 libslindak_la_SOURCES = \
+	configuration.c\
 	db.c           \
 	overrides.c    \
 	debfile.c      \
@@ -9,7 +10,7 @@ libslindak_la_SOURCES = \
 	util.c         \
 	lua.c          \
 	output.c
-libslindak_la_CFLAGS = -DBUILD_DATE="\"$(BUILD_DATE)\"" -DHACKER=$(HACKER) $(LUA_CFLAGS)
+libslindak_la_CFLAGS = -DBUILD_DATE="\"$(BUILD_DATE)\"" -DHACKER=$(HACKER) $(LUA_CFLAGS) -I../include
 libslindak_la_LDFLAGS = -Wl,-soname=$(SLINDAK_SONAME)
 
 slindak_SOURCES = \
@@ -18,8 +19,12 @@ slindak_SOURCES = \
 	lists.c        \
 	messages.c     \
 	package.c      \
-	pool.c         \
-	configuration.c
+	pool.c
 slindak_CFLAGS = -DBUILD_DATE="\"$(BUILD_DATE)\"" -DHACKER=$(HACKER) $(LUA_CFLAGS) -I../include
 slindak_LDADD = $(SQL_LIBS) $(LUA_LIBS) $(POPT_LIBS) -lslindak
+
+slindweb_SOURCES = \
+	slindweb.c
+slindweb_CFLAGS = -DBUILD_DATE="\"$(BUILD_DATE)\"" -DHACKER=$(HACKER) $(LUA_CFLAGS) -I../include
+slindweb_LDADD = $(SQL_LIBS) $(LUA_LIBS) $(POPT_LIBS) $(CGI_LIBS) -lslindak
 
